--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -5,13 +5,14 @@
   tasks:
     - name: Launch EC2 Instance
       ec2_instance:
+        name: "eshop"
         instance_type: t3.medium
-        image_id: ami-04e5276ebb8451442
+        image_id: ami-0bb84b8ffd87024d8
         region: us-east-1
         key_name: devops
-        vpc_subnet_id: subnet-05b9ba9a8f46f29af
+        vpc_subnet_id: subnet-0dcd65ce4a972b58b
         tags:
-            Name: Final project
+            Name: eshop
         count: 1
         security_group: eshop
         network:
